# hw_c_c_plus_plus

./: .travis.yml  CMakeLists.txt  README.md  kek  test.txt  test3.txt
.github/workflows/: blank.yml  ci.yml  deploy.yml
ci/travis/: install-linux.sh
lib/: CMakeLists.txt
lib/parallel/: parallel.c  parallel.h  segment.h  utils.c  utils.h
lib/sequential/: sequential.c  sequential.h  utils.c  utils.h
lib/utils/: utils.c  utils.h
linters/: run.sh  zadachi.txt
linters/cpplint/: cpplint.py
project/: CMakeLists.txt
project/include/: max_of.h  memory.h  parallel.h  parse_user_email.h  parse_user_eml.h  sequential.h  state_t.h  user_info.h  user_info_t.h  utils.h
project/src/: main.c  max_of.c  memory.c  parallel.c  parse_user_email.c  parse_user_eml.c  sequential.c  utils.c
tests/: CMakeLists.txt  stress_test.py  test.cpp  test2.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt
